--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,71 +5,85 @@ on:
     tags:
       - 'v*.*.*'
 
+permissions:
+  contents: write  # Required for creating releases and uploading assets
+
 jobs:
-  create_release:
-    name: Create GitHub Release
+  release:
+    name: Create Release & Build Binaries
     runs-on: ubuntu-latest
     outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
-      version:   ${{ steps.extract_version.outputs.VERSION }}
+      version: ${{ steps.extract_version.outputs.version }}
+      matrix: ${{ steps.setup_matrix.outputs.matrix }}
     steps:
       - name: Check out code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all history for proper version info
 
       - name: Extract version from tag
         id: extract_version
         run: |
           # strip "refs/tags/" prefix
           VERSION=${GITHUB_REF#refs/tags/}
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
-          echo "::set-output name=VERSION::$VERSION"
+          echo "version=${VERSION}" >> $GITHUB_OUTPUT
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
           go-version: '1.23'
+          cache: true
 
       - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        with:
-          tag_name:    ${{ env.VERSION }}
-          release_name: Release ${{ env.VERSION }}
-          body: |
-            🚀 Automated release for **${{ env.VERSION }}**  
-            - Builds for multiple OS/ARCH combos  
-          draft:      false
-          prerelease: false
+        run: |
+          # GitHub CLI is pre-installed on GitHub-hosted runners
+          gh release create ${{ steps.extract_version.outputs.version }} \
+            --title "Release ${{ steps.extract_version.outputs.version }}" \
+            --notes "🚀 Automated release for **${{ steps.extract_version.outputs.version }}**  
+            - Builds for multiple OS/ARCH combos"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  build_and_upload:
-    name: Build & Upload Binaries
-    needs: create_release
+      - name: Setup matrix for build
+        id: setup_matrix
+        run: |
+          echo "matrix=$(jq -c . << EOF
+          {
+            "include": [
+              {"goos": "darwin", "goarch": "amd64"},
+              {"goos": "darwin", "goarch": "arm64"},
+              {"goos": "linux", "goarch": "amd64"},
+              {"goos": "linux", "goarch": "arm"},
+              {"goos": "linux", "goarch": "arm64"},
+              {"goos": "windows", "goarch": "amd64"},
+              {"goos": "windows", "goarch": "arm"},
+              {"goos": "windows", "goarch": "arm64"}
+            ]
+          }
+          EOF)" >> $GITHUB_OUTPUT
+
+  build:
+    needs: release
+    name: Build ${{ matrix.goos }}/${{ matrix.goarch }}
     runs-on: ubuntu-latest
-
     strategy:
-      matrix:
-        goos: [darwin, linux, windows]
-        goarch: [amd64, arm, arm64]
+      matrix: ${{ fromJson(needs.release.outputs.matrix) }}
 
     steps:
       - name: Check out code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
           go-version: '1.23'
+          cache: true
 
-      - name: Configure version and arch
-        run: |
-          echo "VERSION=${{ needs.create_release.outputs.version }}" >> $GITHUB_ENV
-          echo "GOARCH=${{ matrix.goarch }}" >> $GITHUB_ENV
-
-      - name: Build ${{ matrix.goos }}/\${{ matrix.goarch }}
+      - name: Build ${{ matrix.goos }}/${{ matrix.goarch }}
         env:
-          GOOS:   ${{ matrix.goos }}
+          GOOS: ${{ matrix.goos }}
           GOARCH: ${{ matrix.goarch }}
-          VERSION: ${{ env.VERSION }}
+          VERSION: ${{ needs.release.outputs.version }}
         run: |
           set -e
           ext=""
@@ -80,15 +94,21 @@ jobs:
 
           bin="liftoff-${VERSION}-${{ matrix.goos }}-${{ matrix.goarch }}${ext}"
           mkdir -p dist
-          go build -o dist/${bin} ./cmd/liftoff
+          go build -o "dist/${bin}" ./cmd/liftoff
 
           # compress (tar.gz for all platforms)
-          tar czf dist/${bin}.tar.gz -C dist ${bin}
+          tar czf "dist/${bin}.tar.gz" -C dist "${bin}"
 
-      - name: Upload ${{ matrix.goos }}/\${{ matrix.goarch }} to Release
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url:       ${{ needs.create_release.outputs.upload_url }}
-          asset_path:       dist/liftoff-${{ env.VERSION }}-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.goos == 'windows' && '.exe' || '' }}.tar.gz
-          asset_name:       liftoff-${{ env.VERSION }}-${{ matrix.goos }}-${{ matrix.goarch }}.tar.gz
-          asset_content_type: application/gzip
+      - name: Upload Asset to Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VERSION: ${{ needs.release.outputs.version }}
+        run: |
+          ext=""
+          if [ "${{ matrix.goos }}" = "windows" ]; then
+            ext=".exe"
+          fi
+
+          bin="liftoff-${VERSION}-${{ matrix.goos }}-${{ matrix.goarch }}${ext}"
+          # GitHub CLI is pre-installed on GitHub-hosted runners
+          gh release upload ${VERSION} "dist/${bin}.tar.gz" --clobber
